--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl"
   Google search results) and in your feed.xml site description.
 
 baseurl: # the subpath of the site
-url: http://starry99.github.io/catbook # the base hostname & protocol for your site
+url: https://founder-yu.github.io # the base hostname & protocol for your site
 
 permalink: /:year-:month/:title
 timezone:
@@ -20,7 +20,7 @@ cusdis:
     app_id: #your cusdis app_id
 
 user:
-  name: Catbook
+  name: Founder
   pic: /assets/img/avatar.png
   picAlt: "catbook"
   job: a category-centric theme
